<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.hw3.ActivityC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:text="@string/textView1"
            android:layout_margin="@dimen/activity_top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView2"
            android:text="@string/textView2"
            android:layout_margin="@dimen/activity_top_margin"
            android:background="#aa0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MyTextStyles"/>

        <TextView
            android:text="@string/textView3"
            android:layout_margin="@dimen/activity_top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView

            android:text="@string/textView4"
            android:layout_margin="@dimen/activity_top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text="@string/textView5"
            android:layout_margin="@dimen/activity_top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@style/MyTextStyles" />



    </LinearLayout>

</RelativeLayout>
