<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.hw3.ActivityB">


    <Button
        android:id="@+id/button1"
        android:text="@string/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="31sp"
        android:layout_margin="@dimen/activity_top_margin"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/button2"
        android:text="@string/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="31sp"
        android:layout_margin="@dimen/activity_top_margin"
        android:textAppearance="@style/MyTextStyles"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
        android:id="@+id/button3"
        android:text="@string/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="31sp"
        android:layout_margin="@dimen/activity_top_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />

    <Button
        android:id="@+id/button4"
        android:text="@string/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="31sp"
        android:layout_margin="@dimen/activity_top_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:id="@+id/button5"
        android:text="@string/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_top_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        style="@style/Widget.AppCompat.Button.Small" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageButton" />


</LinearLayout>

